update of the hybrid collobarative algorithm

--- a/rec.ipynb
+++ b/rec.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "939ff330",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "f852c808",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "e558f9e0",
    "metadata": {
     "scrolled": false
@@ -145,7 +145,7 @@
        "4  This was a cheesy twist on sloppy joes.  It ma...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "5339841c",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
        "4  ['tomato juice', 'apple cider vinegar', 'sugar...              8  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "a59a909c",
    "metadata": {
     "scrolled": true
@@ -481,7 +481,7 @@
        "max    523359.000000  20160.000000    2.000415e+09   41.000000      23.000000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "64d43ebc",
    "metadata": {},
    "outputs": [
@@ -611,7 +611,7 @@
        "9                       Cough and cold  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "b40afc93",
    "metadata": {},
    "outputs": [
@@ -685,7 +685,7 @@
        "freq             4                          55"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,21 +705,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "7a4561df",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "starting\n",
-      "done \n"
-     ]
+     "data": {
+      "text/plain": [
+       "'\\nfrom fuzzywuzzy import fuzz\\n\\n# Create a new column for medicinal properties\\nrecipes_df[\\'Medicinal_Properties\\'] = \\'\\'\\n\\n# Create an empty list to store the medicinal properties\\nmedicinal_properties = []\\n\\n# Convert the \\'ingredients\\' column from string to list\\nrecipes_df[\\'ingredients\\'] = recipes_df[\\'ingredients\\'].str.split(\\',\\')\\nprint(\"starting\")\\n# Iterate through the recipe ingredients\\nfor ingredients in recipes_df[\\'ingredients\\']:\\n    found_ingredients = []  # List to store found ingredients in the current recipe\\n\\n    # Check if ingredients is not NaN or None\\n    if isinstance(ingredients, list):\\n        # Iterate through each ingredient in the recipe\\n        for ingredient in ingredients:\\n            best_match_score = 0\\n            best_match_ingredient = None\\n\\n            # Find the best matching ingredient in the medicinal DataFrame\\n            for medicinal_ingredient in medicinal_df[\\'Ingredients\\']:\\n                match_score = fuzz.token_set_ratio(ingredient.strip().lower(), medicinal_ingredient.strip().lower())\\n                if match_score > best_match_score:\\n                    best_match_score = match_score\\n                    best_match_ingredient = medicinal_ingredient\\n\\n            # Check if a matching ingredient with sufficient similarity score was found\\n            if best_match_ingredient and best_match_score >= 80:\\n           \\n                found_ingredients.append(best_match_ingredient)\\n\\n    # Get the medicinal properties for the found ingredients\\n    properties = []\\n    for found_ingredient in found_ingredients:\\n    \\n        properties.extend(medicinal_df.loc[medicinal_df[\\'Ingredients\\'] == found_ingredient, \\'benefits\\'].values)\\n    medicinal_properties.append(properties)\\n\\n# Assign the medicinal properties to the new column\\nrecipes_df[\\'Medicinal_Properties\\'] = medicinal_properties\\nprint(\"done \")\\n\\nrecipes_df.to_csv(\\'recipes_with_medicinal_properties.csv\\', index=False)\\n'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
+    "\"\"\"\n",
     "from fuzzywuzzy import fuzz\n",
     "\n",
     "# Create a new column for medicinal properties\n",
@@ -765,12 +767,13 @@
     "recipes_df['Medicinal_Properties'] = medicinal_properties\n",
     "print(\"done \")\n",
     "\n",
-    "recipes_df.to_csv('recipes_with_medicinal_properties.csv', index=False)\n"
+    "recipes_df.to_csv('recipes_with_medicinal_properties.csv', index=False)\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "1f098f79",
    "metadata": {},
    "outputs": [
@@ -953,7 +956,7 @@
        "4  ['Mouth and throat disorders', 'Gastrointestin...  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -965,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "99fd0c65",
    "metadata": {
     "scrolled": true
@@ -988,7 +991,7 @@
        "Name: name, Length: 158, dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1009,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "f90a2caa",
    "metadata": {
     "scrolled": true
@@ -1068,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "1c880983",
    "metadata": {},
    "outputs": [],
@@ -1087,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "77258a0e",
    "metadata": {
     "scrolled": true
@@ -1136,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "ab52309b",
    "metadata": {},
    "outputs": [
@@ -1164,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "a93db3d9",
    "metadata": {
     "scrolled": true
@@ -1175,11 +1178,11 @@
      "output_type": "stream",
      "text": [
       "Recommended recipes for 'Circulatory disorders':\n",
-      "1: 50 chili   for the crockpot\n",
-      "2: fool the meat eaters  chili\n",
-      "3: slightly spicy  black bean burgers\n",
-      "4: outback   steak rub\n",
-      "5: forgotten  minestrone\n"
+      "1: rtsoppa  swedish yellow pea soup\n",
+      "2: 1 easiest dr  pepper ham glaze ever\n",
+      "3: homemade  vegetable soup from a can\n",
+      "4: cream  of cauliflower soup  vegan\n",
+      "5: some like it hot\n"
      ]
     }
    ],
@@ -1234,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "16d992c0",
    "metadata": {},
    "outputs": [
@@ -1327,7 +1330,7 @@
        "4  This was a cheesy twist on sloppy joes.  It ma...  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1347,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "d38e11f3",
    "metadata": {},
    "outputs": [
@@ -1421,7 +1424,7 @@
        "10      24514     4.222222                  9"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1436,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "9bb12d9d",
    "metadata": {
     "scrolled": true
@@ -1512,7 +1515,7 @@
        "71      95534     4.707317                 41"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1524,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "df98c07c",
    "metadata": {},
    "outputs": [
@@ -1617,7 +1620,7 @@
        "4  This was a cheesy twist on sloppy joes.  It ma...  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1629,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "e80e844b",
    "metadata": {},
    "outputs": [
@@ -1657,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "74755786",
    "metadata": {
     "scrolled": false
@@ -1885,7 +1888,7 @@
        "[5 rows x 37 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1903,7 +1906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "c06a066f",
    "metadata": {},
    "outputs": [
@@ -1973,7 +1976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "42687c38",
    "metadata": {},
    "outputs": [
@@ -1989,7 +1992,7 @@
        "       [0., 0., 0., ..., 0., 1., 1.]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2001,7 +2004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "b9c8eb81",
    "metadata": {},
    "outputs": [
@@ -2011,7 +2014,7 @@
        "[18391, 26478, 28671, 37471, 75497]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2040,7 +2043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "6bf68634",
    "metadata": {},
    "outputs": [
@@ -2094,7 +2097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "7f2d0c58",
    "metadata": {
     "scrolled": false
@@ -2107,9 +2110,9 @@
       "The top suggestions for you are:\n",
       "1: amish  tomato ketchup  for canning\n",
       "2: love is in the air  beef fondue   sauces\n",
-      "3: lite  cretons\n",
-      "4: forgotten  minestrone\n",
-      "5: splenda   d  cheesecake sugar free low carb\n"
+      "3: near east  rice pilaf  low fat\n",
+      "4: smells like sunday  chicken fricassee with meatballs\n",
+      "5: the  carrot cake\n"
      ]
     }
    ],
@@ -2168,7 +2171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "1976e6a7",
    "metadata": {},
    "outputs": [
@@ -2188,7 +2191,7 @@
    "source": [
     "def get_combined_recommendations(user_id, recipe_title, user_ratings, user_sim_matrix, cosine_sim_matrix, recipes_df, top_n_collab=1, top_n_content=1):\n",
     "    # Step 1: Get user-based collaborative filtering recommendations\n",
-    "    collab_recommendations = get_user_recipe_recommendations(user_id, user_ratings, user_sim_matrix, recipes_df, top_n=top_n_collab,random_n=0)\n",
+    "    collab_recommendations = get_user_recipe_recommendations(user_id, user_ratings, user_sim_matrix, recipes_df, top_n=top_n_collab+1,random_n=0)\n",
     "\n",
     "    # Step 2: Get content-based filtering recommendations\n",
     "    content_recommendations = get_recipe_recommendations(recipe_title, cosine_sim_matrix, recipes_df, top_n=top_n_content)\n",
@@ -2220,19 +2223,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "f18a0674",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8725f654",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Combined recommendations for user 4470 and recipe 'amish  tomato ketchup  for canning':\n",
+      "1: love is in the air  beef fondue   sauces\n",
+      "2: chile rellenos\n",
+      "3: momma s special  marinade\n",
+      "4: chef salad  dressing\n",
+      "5: fire  sauce\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_combined_recommendations(user_id, recipe_title, user_ratings, user_sim_matrix, cosine_sim_matrix, recipes_df, top_n_collab=2, top_n_content=1):\n",
+    "    # Step 1: Get user-based collaborative filtering recommendations\n",
+    "    collab_recommendations = get_user_recipe_recommendations(user_id, user_ratings, user_sim_matrix, recipes_df, top_n=top_n_collab + 1, random_n=0)\n",
+    "\n",
+    "    # Step 2: Get content-based filtering recommendations\n",
+    "    content_recommendations = get_recipe_recommendations(recipe_title, cosine_sim_matrix, recipes_df, top_n=top_n_content)\n",
+    "\n",
+    "    # Step 3: Combine the recommendations\n",
+    "    combined_recommendations = []\n",
+    "\n",
+    "    for recommendation in collab_recommendations.itertuples():\n",
+    "        recipe_id = recommendation.id\n",
+    "        recipe_name = recommendation.name\n",
+    "        if recipe_name != recipe_title:\n",
+    "            combined_recommendations.append((recipe_id, recipe_name))\n",
+    "\n",
+    "    for recommendation in content_recommendations:\n",
+    "        recipe_id = recommendation[0]\n",
+    "        recipe_name = recommendation[1]\n",
+    "        combined_recommendations.append((recipe_id, recipe_name))\n",
+    "\n",
+    "    return combined_recommendations\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Example usage\n",
+    "user_id = 4470\n",
+    "recipe_title = 'amish  tomato ketchup  for canning'\n",
+    "recommendations = get_combined_recommendations(user_id, recipe_title, user_ratings, user_sim, cosine_sim, recipes_df, top_n_collab=2, top_n_content=3)\n",
+    "print(f\"Combined recommendations for user {user_id} and recipe '{recipe_title}':\")\n",
+    "for i, (recipe_id, recipe_name) in enumerate(recommendations, 1):\n",
+    "    print(f\"{i}: {recipe_name}\")\n"
+   ]
   },
   {
    "cell_type": "code",
