correction of comments

--- a/rec.ipynb
+++ b/rec.ipynb
@@ -1650,7 +1650,7 @@
    "source": [
     "# Number of users\n",
     "print('The ratings dataset has', df_GT100['user_id'].nunique(), 'unique users')\n",
-    "# Number of movies\n",
+    "# Number of recipes\n",
     "print('The ratings dataset has', df_GT100['recipe_id'].nunique(), 'unique recipes')\n",
     "# Number of ratings\n",
     "print('The ratings dataset has', df_GT100['rating'].nunique(), 'unique ratings')\n",
